Created the console Page, added a basic controller and cleaned up the directories.

--- a/Stella Commerce/Pages/Index.cshtml
+++ b/Stella Commerce/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Stella Commerce Portal";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is your Stella Commerce Merchant Portal provided by Polaris Payments. We hope you enjoy using the platform today!</p>
 </div>
