Simplified class structure, made all access modifiers public, created new views.

--- a/Stella Commerce/Pages/Profiles.cshtml
+++ b/Stella Commerce/Pages/Profiles.cshtml
@@ -1,4 +1,13 @@
 ﻿@page
 @model Stella_Commerce.Pages.ProfilesModel
 @{
+    ViewData["Title"] = "Profiles";
 }
+<h1>@ViewData["Title"]</h1>
+
+<div style="float: left;">
+    <h2>All Profiles</h2>
+    </div>
+<div style="float: right;">
+    <h2>Profile Details</h2>
+</div>
