Added DB context, created skeleton HTTP client, included view fragments to profiles page.

--- a/Stella Commerce/Pages/Profiles.cshtml
+++ b/Stella Commerce/Pages/Profiles.cshtml
@@ -7,7 +7,9 @@
 
 <div style="float: left;">
     <h2>All Profiles</h2>
+    <partial name="~/Pages/Fragments/ProfilesList.cshtml"/>
     </div>
 <div style="float: right;">
     <h2>Profile Details</h2>
+    <partial name="~/Pages/Fragments/ProfileDetails.cshtml"/>
 </div>
