Autowired the db context to the Profiles Service, fixed the styling on the profiles page.

--- a/Stella Commerce/Pages/Profiles.cshtml
+++ b/Stella Commerce/Pages/Profiles.cshtml
@@ -7,9 +7,76 @@
 
 <div style="float: left;">
     <h2>All Profiles</h2>
-    <partial name="~/Pages/Fragments/ProfilesList.cshtml"/>
+    
+        @if (Model.Profiles.Count > 0)
+        {
+         <select class="form-control">
+            @foreach (Model.Profile profile in @Model.Profiles)
+            {
+                <option onclick="loadProfile('@profile.MerchantRefNum')">@profile.FirstName @profile.LastName</option>
+            }
+
+        </select>
+        }else {
+            <p>None.</p>
+        }
     </div>
 <div style="float: right;">
+
     <h2>Profile Details</h2>
-    <partial name="~/Pages/Fragments/ProfileDetails.cshtml"/>
+    <form asp-route="Profiles" method="post">
+        <div class="form-row">
+            <div class="col">
+                <label asp-for="PaymentHandle.Profile.FirstName">First Name</label>
+                <input class="form-control" asp-for="PaymentHandle.Profile.FirstName" type="text"/>
+            </div>
+            <div class="col">
+                <label asp-for="PaymentHandle.Profile.LastName">Last Name</label>
+                <input class="form-control" asp-for="PaymentHandle.Profile.LastName" type="text" />
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col">
+                <label asp-for="PaymentHandle.Profile.Email">Email Address</label>
+                <input class="form-control" asp-for="PaymentHandle.Profile.Email" type="email" />
+            </div>
+            <div class="col">
+                <label asp-for="PaymentHandle.Profile.Phone">Phone Number</label>
+                <input class="form-control" asp-for="PaymentHandle.Profile.Phone" type="tel" />
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="col">
+                <label asp-for="PaymentHandle.BillingDetails.Street">Street Address</label>
+                <input class="form-control" asp-for="PaymentHandle.BillingDetails.Street" type="text" />
+            </div>
+            <div class="col">
+                <label asp-for="PaymentHandle.BillingDetails.Street2">Address Line 2</label>
+                <input class="form-control" asp-for="PaymentHandle.BillingDetails.Street2" type="text" />
+            </div>
+        </div>
+        
+        <label asp-for="PaymentHandle.BillingDetails.City"></label>
+        <input class="form-control" asp-for="PaymentHandle.BillingDetails.City" type="text" />
+        
+        <label asp-for="PaymentHandle.BillingDetails.Zip"></label>
+        <input class="form-control" asp-for="PaymentHandle.BillingDetails.Zip" type="text" />
+        
+        <label asp-for="PaymentHandle.BillingDetails.Country"></label>
+        <select class="form-control" asp-for="PaymentHandle.BillingDetails.Country">
+            <option value="CA">Canada</option>
+            <option value="US">United States of America</option>
+            <option value="GB">United Kingdom of Great Britain and Northern Ireland</option>
+            <option value="IT">Italy</option>
+        </select>
+
+        <label asp-for="PaymentHandle.MerchantDescriptor.DynamicDescriptor">Dynamic Descriptor</label>
+        <input class="form-control" asp-for="PaymentHandle.MerchantDescriptor.DynamicDescriptor" type="text" />
+
+        <label asp-for="PaymentHandle.MerchantDescriptor.DynamicDescriptor">Merchant Descriptor Phone Number</label>
+        <input class="form-control" asp-for="PaymentHandle.MerchantDescriptor.DynamicDescriptor" type="text" />
+
+        <button id="save" type="submit" class="btn btn-primary mb-2">Save</button>
+    </form>
 </div>
