Fixed base route for the HTTP Client.

--- a/Stella Commerce/Pages/Index.cshtml
+++ b/Stella Commerce/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>This is your Stella Commerce Merchant Portal provided by Polaris Payments. We hope you enjoy using the platform today!</p>
+    <img src="./img/haley.jpg" alt="Haley's Comet" class="rounded img-thumbnail">
 </div>
