--- a/Stella Commerce/Pages/Shared/_Layout.cshtml
+++ b/Stella Commerce/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Profiles">Console</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Profiles">Profiles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Payments">Payments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
